<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auspost.view.ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/colorWhite"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:background="@color/colorGrey"
                android:id="@+id/top_frag"
                android:layout_height="267dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/profile_main_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_title_register_profile"
                        android:layout_marginLeft="18dp"
                        android:layout_marginRight="35dp"
                        android:layout_marginTop="48dp"
                        android:textSize="24sp"
                        android:textColor="@color/colorProfileTitle" />

                    <TextView
                        fontPath="fonts/Roboto-Medium.ttf"
                        android:text="@string/profile_subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView3"
                        android:layout_marginLeft="18dp"
                        android:layout_marginTop="7dp"
                        android:textSize="12sp"
                        android:textColor="@color/colorProfileSubtitle" />
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:background="@color/colorWhite"
                android:layout_below="@+id/top_frag"
                android:id="@+id/bottom_frag"
                android:layout_height="70dp">

            </FrameLayout>

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/profile_pic"
                android:src="@drawable/camera"
                android:layout_width="77dp"
                android:layout_height="77dp"
                app:civ_border_color="@color/colorWhite"
                app:civ_border_width="3dp"
                app:civ_shadow="false"
                app:civ_shadow_radius="5"
                app:civ_shadow_color="@color/colorTextOpacity"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="230dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/bottom_frag"
                android:layout_marginTop="38dp"
                android:id="@+id/linearLayout">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="19dp"
                    android:layout_marginRight="19dp">

                    <TextView
                        fontPath="fonts/Roboto-Medium.ttf"
                        android:text="@string/profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView5"
                        android:textColor="@color/colorText" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:id="@+id/txt_first_name"
                        android:inputType="text"
                        android:background="@drawable/bordered_textview"
                        android:layout_marginTop="12dp"
                        android:padding="16dp"
                        android:textSize="14sp"
                        android:editable="false"
                        android:textColor="@color/colorTextOpacity" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="34dp"
                    android:layout_marginLeft="19dp"
                    android:layout_marginRight="19dp">

                    <TextView
                        fontPath="fonts/Roboto-Medium.ttf"
                        android:text="@string/profile_last_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView6"
                        android:textColor="@color/colorText" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:inputType="text"
                        android:id="@+id/txt_last_name"
                        android:background="@drawable/bordered_textview"
                        android:layout_marginTop="12dp"
                        android:padding="16dp"
                        android:textSize="14sp"
                        android:editable="false"
                        android:textColor="@color/colorTextOpacity" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="34dp"
                    android:layout_marginLeft="19dp"
                    android:layout_marginRight="19dp">

                    <TextView
                        fontPath="fonts/Roboto-Medium.ttf"
                        android:text="@string/profile_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView7"
                        android:textColor="@color/colorText" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:id="@+id/txt_email"
                        android:background="@drawable/bordered_textview"
                        android:layout_marginTop="12dp"
                        android:padding="16dp"
                        android:textSize="14sp"
                        android:maxLines="1"
                        android:editable="false"
                        android:textColor="@color/colorTextOpacity" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="34dp"
                    android:layout_marginLeft="19dp"
                    android:layout_marginRight="19dp">

                    <TextView
                        fontPath="fonts/Roboto-Medium.ttf"
                        android:text="@string/profile_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView8"
                        android:textColor="@color/colorText" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:id="@+id/txt_phone"
                        android:background="@drawable/bordered_textview"
                        android:layout_marginTop="12dp"
                        android:padding="16dp"
                        android:textSize="14sp"
                        android:maxLines="1"
                        android:editable="false"
                        android:textColor="@color/colorTextOpacity" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="34dp"
                    android:layout_marginLeft="19dp"
                    android:layout_marginRight="19dp"
                    android:layout_marginBottom="23dp">

                    <TextView
                        fontPath="fonts/Roboto-Medium.ttf"
                        android:text="@string/profile_dietary_requirements"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView9"
                        android:textColor="@color/colorText" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/sp_dietary"
                        android:layout_marginTop="12dp"
                        android:padding="16dp"
                        android:textSize="14sp"
                        style="@style/spinner_style" />
                </LinearLayout>

                <include layout="@layout/button" />
            </LinearLayout>

            <TextView
                fontPath="fonts/Roboto-Medium.ttf"
                android:text="@string/profile_add_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textColor="@color/colorText"
                android:layout_above="@+id/linearLayout"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
    </ScrollView>

    <include layout="@layout/progress"/>

</RelativeLayout>
