<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auspost.view.ProfileActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/colorWhite"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:background="@color/colorGrey"
            android:id="@+id/top_frag"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="50dp">

                <TextView
                    android:text="@string/notice_main_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_title_register_profile"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="48dp"
                    android:textSize="24sp"
                    android:textColor="@color/colorProfileTitle" />

                <TextView
                    fontPath="fonts/Roboto-Medium.ttf"
                    android:text="@string/notice_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="7dp"
                    android:textSize="12sp"
                    android:textColor="@color/colorProfileSubtitle" />
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:background="@color/colorWhite"
            android:layout_below="@+id/top_frag"
            android:id="@+id/middle_frag"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text"
                fontPath="fonts/Roboto-Regular.ttf"
                android:layout_width="match_parent"
                android:hint="@string/notice_hint"
                android:inputType="text|textMultiLine"
                android:gravity="top"
                android:paddingLeft="18dp"
                android:paddingTop="12dp"
                android:paddingRight="18dp"
                android:paddingBottom="12dp"
                android:background="@android:color/transparent"
                android:textSize="14sp"
                android:textColor="@color/colorProfileSubtitle"
                android:layout_height="160dp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:background="@color/colorGrey"
            android:layout_below="@+id/top_frag"
            android:id="@+id/bottom_frag"
            android:layout_height="match_parent"
            android:paddingTop="65dp">

            <include layout="@layout/button" />

        </FrameLayout>

    </LinearLayout>

    <include layout="@layout/progress"/>

</LinearLayout>
