<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGrey"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@color/colorWhite"
                android:layout_height="match_parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:background="@color/colorGrey"
                    android:id="@+id/top_frag"
                    android:layout_height="74dp">

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:background="@color/colorWhite"
                    android:layout_below="@+id/top_frag"
                    android:id="@+id/bottom_frag"
                    android:layout_height="70dp">

                </FrameLayout>

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/profile_pic"
                    android:src="@drawable/camera"
                    android:layout_width="77dp"
                    android:layout_height="77dp"
                    app:civ_border_color="@color/colorWhite"
                    app:civ_border_width="3dp"
                    app:civ_shadow="false"
                    app:civ_shadow_radius="5"
                    app:civ_shadow_color="@color/colorTextOpacity"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="37dp"/>

                <TextView
                    android:text="@string/profile_edit_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:layout_below="@+id/profile_pic"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/colorText" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/bottom_frag"
                    android:layout_marginTop="38dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="19dp"
                        android:layout_marginRight="19dp">

                        <TextView
                            android:text="@string/profile_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView5"
                            android:textColor="@color/colorText" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:id="@+id/txt_first_name"
                            android:background="@drawable/bordered_textview"
                            android:layout_marginTop="12dp"
                            android:padding="16dp"
                            android:textSize="14sp"
                            android:textColor="@color/colorTextOpacity" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="34dp"
                        android:layout_marginLeft="19dp"
                        android:layout_marginRight="19dp">

                        <TextView
                            android:text="@string/profile_last_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView6"
                            android:textColor="@color/colorText" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:id="@+id/txt_last_name"
                            android:background="@drawable/bordered_textview"
                            android:layout_marginTop="12dp"
                            android:padding="16dp"
                            android:textSize="14sp"
                            android:textColor="@color/colorTextOpacity" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="34dp"
                        android:layout_marginLeft="19dp"
                        android:layout_marginRight="19dp">

                        <TextView
                            android:text="@string/profile_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView7"
                            android:textColor="@color/colorText" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:id="@+id/txt_email"
                            android:background="@drawable/bordered_textview"
                            android:layout_marginTop="12dp"
                            android:padding="16dp"
                            android:textSize="14sp"
                            android:editable="false"
                            android:textColor="@color/colorTextOpacity" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="34dp"
                        android:layout_marginLeft="19dp"
                        android:layout_marginRight="19dp">

                        <TextView
                            android:text="@string/profile_phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView8"
                            android:textColor="@color/colorText" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:id="@+id/txt_phone"
                            android:background="@drawable/bordered_textview"
                            android:layout_marginTop="12dp"
                            android:padding="16dp"
                            android:textSize="14sp"
                            android:editable="false"
                            android:textColor="@color/colorTextOpacity" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="34dp"
                        android:layout_marginLeft="19dp"
                        android:layout_marginRight="19dp">

                        <TextView
                            android:text="@string/profile_dietary_requirements"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView9"
                            android:textColor="@color/colorText" />

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:id="@+id/sp_dietary"
                            android:layout_marginTop="12dp"
                            android:padding="16dp"
                            android:textSize="14sp"
                            android:clickable="false"
                            style="@style/spinner_style" />
                    </LinearLayout>

                    <Button
                        android:text="@string/profile_button"
                        android:id="@+id/btn_save"
                        android:textSize="18sp"
                        android:textAllCaps="false"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:gravity="center"
                        android:background="@drawable/background_button_red"
                        android:textColor="@color/colorWhite"
                        android:layout_marginLeft="19dp"
                        android:layout_marginRight="19dp"
                        android:layout_marginTop="34dp"
                        android:layout_marginBottom="15dp" />
                </LinearLayout>

                <include layout="@layout/progress"/>

            </RelativeLayout>
        </ScrollView>

    </LinearLayout>

</LinearLayout>
